[package]
name = "helio-snapshot"
version = "0.1.0"
edition = "2021"
description = "Headless snapshot renderer for Helio — loads a model file, renders one frame, saves a PNG"
license = "MIT OR Apache-2.0"

[dependencies]
helio-asset-compat = { workspace = true }
helio              = { workspace = true }
helio-default-graphs = { workspace = true }
wgpu               = { workspace = true }
glam               = { workspace = true }
bytemuck           = { workspace = true, features = ["derive"] }
image              = { workspace = true, features = ["png", "jpeg"] }
pollster           = { workspace = true }
thiserror          = { workspace = true }
log                = { workspace = true }
futures-channel    = "0.3"

[dev-dependencies]
env_logger         = { workspace = true }

[[example]]
name = "snapshot_test_fbx"
path = "examples/snapshot_test_fbx.rs"

[[example]]
name = "batch_benchmark"
path = "examples/batch_benchmark.rs"
